--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="center-align">
-  <div>
+  <div style="font-family: 'Roboto';">
     <span>Intranety, </span>
     <ng-content select="[tab]"/>
   </div>
