--- a/src/app/component/main-page/main-page.component.html
+++ b/src/app/component/main-page/main-page.component.html
@@ -1,26 +1,30 @@
 <div>
-  <mat-toolbar>
-    <app-header [user]="authenticatedUserName">
-      <span tab> {{contentType | ContentTabDisplay}} </span>
-    </app-header>
-  </mat-toolbar>
+  <body>
+    <mat-toolbar>
+      <app-header [user]="authenticatedUserName" [ngStyle]="{ 'margin-left': isFullLeftNav ? '200px' : '70px' }">
+        <span tab> {{contentType | ContentTabDisplay}} </span>
+      </app-header>
+    </mat-toolbar>
+  
+    <mat-sidenav-container>
+        <mat-sidenav mode="side" opened="true" class="sidenav left-sidenav" [ngClass]="{'full-left-nav': isFullLeftNav, 'some-left-nav': !isFullLeftNav}" >
+            <app-left-nav (contentTypeChangeEvent)="contentTypeChange($event)" (resizeEvent)="resizeLeftNav($event)" />
+        </mat-sidenav>
+  
+      <mat-sidenav-content [ngStyle]="{ 'margin-left': isFullLeftNav ? '200px' : '70px' }">
+        <div class="content">
+          <app-content-home *ngIf="contentType === contentEnum.HOME" />
+          <app-content-employee *ngIf="contentType === contentEnum.EMPLOYEE" />
+          <app-content-document *ngIf="contentType === contentEnum.DOCUMENT" />
+          <app-content-duty *ngIf="contentType === contentEnum.DUTY" />
+        </div>
+      </mat-sidenav-content>
+  
+      <mat-sidenav mode="side" opened="true"  position="end" class="sidenav right-sidenav">
+        <app-right-nav-parent/>
+      </mat-sidenav>
+    </mat-sidenav-container>
 
-  <mat-sidenav-container>
-    <mat-sidenav mode="side" opened="true" class="sidenav left-sidenav" >
-      <app-left-nav (contentTypeChangeEvent)="contentTypeChange($event)" />
-    </mat-sidenav>
-
-    <mat-sidenav-content>
-      <div class="content">
-        <app-content-home *ngIf="contentType === contentEnum.HOME" />
-        <app-content-employee *ngIf="contentType === contentEnum.EMPLOYEE" />
-        <app-content-document *ngIf="contentType === contentEnum.DOCUMENT" />
-        <app-content-duty *ngIf="contentType === contentEnum.DUTY" />
-      </div>
-    </mat-sidenav-content>
-
-    <mat-sidenav mode="side" opened="true"  position="end" class="sidenav right-sidenav">
-      <app-right-nav-parent/>
-    </mat-sidenav>
-  </mat-sidenav-container>
+    <app-footer class="footer-positon" [ngStyle]="{ 'margin-left': isFullLeftNav ? '200px' : '70px' }"/>
+  </body>
 </div>
