--- a/src/app/component/content/content-home/edit-post/edit-post.component.css
+++ b/src/app/component/content/content-home/edit-post/edit-post.component.css
@@ -1,5 +1,7 @@
   form {
     margin-bottom: 30px;
+    margin-top: 30px;
+    background-color: #f0f0f0;
   }
   
   .quill-display{
@@ -25,5 +27,11 @@
   .center-align {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+  }
+
+  .end-flex {
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
