--- a/src/app/component/content/content-home/display-post/display-post.component.html
+++ b/src/app/component/content/content-home/display-post/display-post.component.html
@@ -1,21 +1,21 @@
-<div class="post-row">
+<div class="global-post-row">
 
-  <div class="post-main-header">
-    <div class="center-align">
-      <div class="post-header"> {{ card.title }}</div>
+  <div class="global-post-main-header">
+    <div class="global-center-align">
+      <div class="global-post-header"> {{ card.title }}</div>
       <div *ngIf="isUserAuthenticated">
         <button mat-icon-button (click)="sendEditEvent()"><mat-icon>edit</mat-icon></button>
         <button mat-icon-button (click)="deletePost()"><mat-icon>remove_circle_outline</mat-icon></button>
       </div>
     </div>
 
-    <div class="post-under-head"> 
+    <div class="global-post-under-head"> 
       <p>Autor:</p> {{ card.user }}<p>, </p>
       <p>Dodano:</p> {{ card.creationTime | creationTimeRepresentation}}
     </div>
   </div>
 
-  <div class="main-text" [innerHTML]="card.message | SafeHtml"></div>
+  <div class="global-main-text" [innerHTML]="card.message | SafeHtml"></div>
 
 </div>
 
