--- a/src/app/component/main-page/main-page.component.css
+++ b/src/app/component/main-page/main-page.component.css
@@ -28,7 +28,6 @@
   border-bottom: 1px solid white;
 }
 
-
 mat-toolbar {
   background: #A89985;
   color: white;
@@ -42,14 +41,8 @@ mat-toolbar {
 }
 
 mat-sidenav-container {
-    min-height: calc(100vh - 65px);
+    min-height: 100vh;
 }
-
-
-/* where it has usage ?? */
- .mat-drawer-content {
-  overflow: hidden !important;
-} 
 
 body {
   position: relative;
@@ -58,7 +51,7 @@ body {
 body::after {
   content: '';
   display: block;
-  height: 50px; /* Set same as footer's height */
+  height: 50px; 
 }
 
 .footer-positon {
@@ -66,5 +59,4 @@ body::after {
   bottom: 0;
   width: -webkit-fill-available;
   height: 50px;
-  /* margin-left: 200px; */
 }
