--- a/src/app/component/content/content-employee/content-employee.component.css
+++ b/src/app/component/content/content-employee/content-employee.component.css
@@ -10,6 +10,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.flex-container p {
+  font-family: 'Merriweather';
+}
 
 .button-row {
   margin: 5px 0 5px 0;
@@ -65,6 +68,7 @@ table {
 }
 
 .text-emp{
+  font-family: 'Roboto';
   margin-left: 15px;
   flex: 1 0 90%;
 }
