--- a/src/app/component/left-nav/left-nav.component.html
+++ b/src/app/component/left-nav/left-nav.component.html
@@ -21,6 +21,10 @@
       <mat-icon>bookmark_border</mat-icon>
       <span>{{ContentEnum.DUTY | ContentTabDisplay}}</span>
     </button>
+    <button mat-button class="menu-button" (click)="setContent(ContentEnum.LINK)">
+      <mat-icon>phonelink</mat-icon>
+      <span>{{ContentEnum.LINK | ContentTabDisplay}}</span>
+    </button>
   </ng-template>
 
   <ng-template #some>
@@ -35,6 +39,9 @@
     </button>
     <button mat-button class="menu-button-some" (click)="setContent(ContentEnum.DUTY)">
       <mat-icon style="margin-right: 0; transform: scale(1.3);"> bookmark_border</mat-icon>
+    </button>
+    <button mat-button class="menu-button-some" (click)="setContent(ContentEnum.LINK)">
+      <mat-icon style="margin-right: 0; transform: scale(1.3);"> phonelink</mat-icon>
     </button>
   </ng-template>
 
