--- a/src/app/component/content/content-link/contact/contact.component.css
+++ b/src/app/component/content/content-link/contact/contact.component.css
@@ -9,12 +9,20 @@
   }
 
   .contact-row {
+    border-top: 1px solid #ccc;
     display: flex;
     align-self: center;
     justify-content: space-between;
+    margin-bottom: 5px;
   }
 
-  .down-text {
-    color: #888;
-    font-size: smaller;
-  }
+.upper-text {
+  margin-bottom: 2px;
+  font-weight: bolder;
+  font-family: 'Merriweather';
+}
+
+.down-text-with-icon {
+  display: inline-flex;
+   align-items: center;
+}
