--- a/src/app/component/content/content-link/enviroments/enviroments.component.html
+++ b/src/app/component/content/content-link/enviroments/enviroments.component.html
@@ -1,4 +1,3 @@
-<section *ngIf="envApps$ | async as envApps">
     <p style="font-size: larger; font-weight: bolder; font-family: 'Merriweather';"> Aplikacje </p>
     <div *ngFor="let dirtyCard of touchedEnvApps; index as ind">
   
@@ -21,7 +20,7 @@
         </div>
   
         <div *ngIf="isUserAuthenticated">
-          <button mat-icon-button >
+          <button mat-icon-button (click)="openDialogEdit(card)" >
             <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button (click)="deleteContact(card)">
@@ -32,5 +31,4 @@
   
     </div>
   
-  </section>
   
