--- a/src/app/component/content/content-employee/edit-employee-team-dialog/edit-employee-team-dialog.component.html
+++ b/src/app/component/content/content-employee/edit-employee-team-dialog/edit-employee-team-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Edycja Pracownika</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" style="padding-bottom: 0;">
   <form [formGroup]="employeeGroupForm">
 
     <div class="row">
