--- a/src/app/component/content/content-document/edit-document-dialog/edit-document-dialog.component.css
+++ b/src/app/component/content/content-document/edit-document-dialog/edit-document-dialog.component.css
@@ -1,8 +1,8 @@
 .form {
     margin: auto;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 20px;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding: 20px 20px 0 20px;
     max-width: 800px;
   }
 
