--- a/src/app/component/content/content-document/edit-document-dialog/edit-document-dialog.component.html
+++ b/src/app/component/content/content-document/edit-document-dialog/edit-document-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Edycja Dokumentu</h2>
-<div class="mat-typography">
+<mat-dialog-content class="mat-typography" style="padding-bottom: 0;">
   <form [formGroup]="documentForm" (ngSubmit)="editDocument()">
 
     <div class="form">
@@ -40,6 +40,6 @@
     </mat-dialog-actions>
 
   </form>
-</div>
+</mat-dialog-content>
 
 
