--- a/src/app/component/content/content-employee/content-employee.component.css
+++ b/src/app/component/content/content-employee/content-employee.component.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .flex-container p {
   font-family: 'Merriweather';
 }
@@ -18,6 +19,11 @@
   margin: 5px 0 5px 0;
   display: flex;
   align-items: center;
+}
+
+.emp-header {
+  font-size: 1.1em;
+  margin: 0px 0 10px 0;
 }
 
 .filter-form {
@@ -77,8 +83,29 @@ table {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #fff;
+  padding: 1px;
+  margin: 2px;
 }
 
 #admin-components > * {
   margin: 15px 0 15px 0;
+}
+
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure the spinner is on top of other content */
 }
