--- a/src/app/component/content/content-employee/new-employee-team/new-employee-team.component.css
+++ b/src/app/component/content/content-employee/new-employee-team/new-employee-team.component.css
@@ -27,3 +27,8 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.empty-element::before {
+  content: 'Nadrzędny';
+  font-style: italic;
+}
