--- a/src/app/component/content/content-employee/new-employee-team/new-employee-team.component.html
+++ b/src/app/component/content/content-employee/new-employee-team/new-employee-team.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="shouldComponentBeRender">
 
     <div class="header">
-        <h1 style="font-family: 'Roboto'; margin-left: 20px;">Dodaj nowy post w aktualnościach</h1>
+        <h1 style="font-family: 'Roboto'; margin-left: 20px;">Dodaj nowy zespół</h1>
         <div style="margin-right: 20px;">
             <button mat-icon-button (click)="shouldDisplayForm(false)"><mat-icon>remove_circle_outline</mat-icon></button>
         </div>
@@ -17,7 +17,7 @@
             <mat-form-field style="max-height: 70px; width: 200px;">
                 <mat-label>Zespół Nadrzędny</mat-label>
                 <mat-select formControlName="parentTeam">
-                    <mat-option *ngFor="let team of teamArrayInput" [value]="team" >
+                    <mat-option *ngFor="let team of teamArrayShadow" [value]="team" [ngClass]="{'empty-element': team === ''}" >
                         {{team}}
                     </mat-option>
                 </mat-select>
